Vercel `routes` work!!!

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "routes": [
+    {
+      "src": "(?<filepath>.+)\\.(?<ext>jpg)",
+      "dest": "https://media.githubusercontent.com/media/unitof/vercel-git-lfs-test/main/$filepath.$ext"
+    }
+  ],
   "github": {
     "silent": true
   }
