--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "routes": [
+  "rewrites": [
     {
       "src": "(?<filepath>.+)\\.(?<ext>jpg)",
       "dest": "https://media.githubusercontent.com/media/unitof/vercel-git-lfs-test/main/$filepath.$ext"
