--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "routes": [
     {
       "src": "/(?<filepath>.+)\\.(?<ext>jpg)",
-      "dest": "https://media.githubusercontent.com/media/unitof/vercel-git-lfs-test/main/$filepath.$ext"
+      "dest": "https://media.githubusercontent.com/media/unitof/vercel-git-lfs-test/main/$filepath.$ext",
+      "headers": {
+        "Cache-Control": "s-maxage=3600, stale-while-revalidate"
+      }
     }
   ],
   "github": {
