Simplify cache logic to 1 hour

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "/(?<filepath>.+)\\.(?<ext>jpg)",
       "dest": "https://media.githubusercontent.com/media/unitof/vercel-git-lfs-test/main/$filepath.$ext",
       "headers": {
-        "Cache-Control": "s-maxage=3600, stale-while-revalidate"
+        "Cache-Control": "s-maxage=3600"
       }
     }
   ],
