--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,9 @@
   "routes": [
     {
       "src": "/(?<filepath>.+)\\.(?<ext>jpg)",
-      "dest": "https://media.githubusercontent.com/media/unitof/vercel-git-lfs-test/main/$filepath.$ext",
+      "dest": "/api/lfs-proxy",
       "headers": {
-        "Cache-Control": "s-maxage=3600",
-        "X-JacobFord-Test": "hello-world"
+        "Cache-Control": "s-maxage=3600"
       }
     }
   ],
