Forgot to remove headers from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "routes": [
     {
       "src": "/(?<filepath>.+)\\.(?<ext>jpg)",
-      "dest": "/api/lfs-proxy",
-      "headers": {
-        "Cache-Control": "s-maxage=3600"
-      }
+      "dest": "/api/lfs-proxy"
     }
   ],
   "github": {
